# fenris

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build_docs.sh  rustfmt.toml
.github/workflows/: build.yml
assets/: doc-before-content.html  doc-header.html
assets/meshes/: cube_hex27_8.msh  cube_hex8_8.msh  cube_tet10_24.msh  cube_tet4_24.msh  rectangle_tri3_110.msh  sphere_593.msh  square_quad4_4.msh  square_quad4_79.msh  square_quad9_4.msh  square_tri3_4.msh  square_tri6_4.msh
benches/: assembly.rs
examples/: poisson.rs  poisson2d.rs  polymesh_intersection.rs
examples/poisson_common/: mod.rs
fenris-geometry/: .gitignore  Cargo.toml
fenris-geometry/src/: lib.rs  polygon.rs  polymesh.rs  polytope.rs  predicates.rs  proptest.rs  proptest_strategies.rs  sdf.rs  util.rs  vtkio.rs
fenris-geometry/src/primitives/: ball.rs  half_space.rs  hexahedron.rs  line.rs  mod.rs  plane.rs  quad.rs  tetrahedron.rs  triangle.rs
fenris-geometry/tests/unit_tests/: aabb.rs  geometry.rs  mod.rs  polygon.rs  polymesh.rs  polytope.rs  predicates.rs  util.rs
fenris-geometry/tests/unit_tests/primitives/: line.rs  mod.rs  triangle.rs
fenris-nested-vec/: Cargo.toml
fenris-nested-vec/tests/: test.rs
fenris-optimize/: Cargo.toml
fenris-optimize/src/: calculus.rs  lib.rs  newton.rs
fenris-optimize/tests/unit_tests/: calculus.rs  mod.rs  newton.rs
fenris-paradis/: Cargo.toml
fenris-paradis/src/: adapter.rs  coloring.rs  lib.rs  slice.rs
fenris-quadrature/: Cargo.toml  build.rs
fenris-quadrature/assets/: generate_svg.sh  reference_hex.asy  reference_prism.asy  reference_pyramid.asy  reference_quad.asy  reference_tet.asy  reference_tri.asy
fenris-quadrature/rules/polyquad/: README
fenris-quadrature/rules/polyquad/compact/hex/: 1-1.txt  11-90.txt  3-6.txt  5-14.txt  7-34.txt  9-58.txt
fenris-quadrature/rules/polyquad/compact/pri/: 1-1.txt  10-85.txt  2-5.txt  3-8.txt  4-11.txt  5-16.txt  6-28.txt  7-35.txt  8-46.txt  9-60.txt
fenris-quadrature/rules/polyquad/compact/pyr/: 1-1.txt  10-83.txt  2-5.txt  3-6.txt  4-10.txt  5-15.txt  6-24.txt  7-31.txt  8-47.txt  9-62.txt
fenris-quadrature/rules/polyquad/compact/quad/: 11-28.txt  13-37.txt  15-48.txt  17-60.txt  19-72.txt  21-85.txt  3-4.txt  5-8.txt  7-12.txt  9-20.txt
fenris-quadrature/rules/polyquad/compact/tet/: 10-81.txt  2-4.txt  3-8.txt  5-14.txt  6-24.txt  7-35.txt  8-46.txt  9-59.txt
fenris-quadrature/rules/polyquad/compact/tri/: 10-25.txt  11-28.txt  12-33.txt  13-37.txt  14-42.txt  15-49.txt  16-55.txt  17-60.txt  18-67.txt  19-73.txt  2-3.txt  20-79.txt  4-6.txt  5-7.txt  6-12.txt  7-15.txt  8-16.txt  9-19.txt
fenris-quadrature/src/: lib.rs  polyquad.rs  tensor.rs  univariate.rs
fenris-quadrature/src/codegen/: gauss_lobatto_rules.rs  gauss_lobatto_rules_doc_stub.md
fenris-quadrature/tests/: unit.rs
fenris-quadrature/tests/unit_tests/: mod.rs  polyquad.rs  tensor.rs  univariate.rs
fenris-quadrature/tools/: generate_gauss_lobatto_code.py
fenris-solid/: Cargo.toml
fenris-solid/assets/: doc-header.html
fenris-solid/src/: gravity_source.rs  lib.rs  logdet.rs  materials.rs
fenris-solid/tests/: unit.rs
fenris-solid/tests/unit_tests/: gravity_source.rs  logdet.rs  material_elliptic_operator.rs  materials.rs  mod.rs
fenris-sparse/: Cargo.toml
fenris-sparse/fenris-sparse-proptest/: Cargo.toml
fenris-sparse/fenris-sparse-proptest/src/: lib.rs
fenris-sparse/src/: cg.rs  sparse.rs
fenris-sparse/tests/: cg.rs  cg_fem.rs  sparse.rs
fenris-traits/: Cargo.toml
fenris-traits/src/: allocators.rs  lib.rs
nested-vec/: Cargo.toml
nested-vec/src/: lib.rs
nested-vec/tests/: test.rs
notebooks/convergence/: Error estimation.ipynb  Poison 2D MMS.ipynb  Poisson_MMS.ipynb
notebooks/solid/: Hyperelastic Materials.ipynb
paradis/: Cargo.toml  test_sanitized.sh  tsan_suppression.txt
paradis/src/: adapter.rs  coloring.rs  lib.rs  slice.rs
polyquad-parse/: Cargo.toml
polyquad-parse/src/: lib.rs
polyquad-parse/tests/: unit_tests.rs
sparse/: Cargo.toml
sparse/sparse-proptest/: Cargo.toml
sparse/sparse-proptest/src/: lib.rs
sparse/src/: cg.rs  lib.rs  sparse.rs
sparse/tests/: cg.rs  cg_fem.rs  sparse.proptest-regressions  sparse.rs
src/: allocators.rs  assembly.rs  assembly2.rs  connectivity.rs  element.rs  error.rs  integrate.rs  interpolate.rs  lib.rs  mesh.rs  mesh_convert.rs  model.rs  procedural.rs  proptest.rs  quadrature.rs  reorder.rs  space.rs  space_impl.rs  util.rs  vtk.rs  workspace.rs
src/assembly/: buffers.rs  global.rs  local.rs  operators.rs
src/assembly/local/: elliptic.rs  mass.rs  quadrature_table.rs  source.rs
src/assembly/operators/: laplace.rs
src/element/: hexahedron.rs  quadrilateral.rs  segment.rs  tetrahedron.rs  triangle.rs
src/io/: mod.rs  msh.rs  vtk.rs
src/mesh/: procedural.rs  refinement.rs  reorder.rs
src/mesh/refinement/: detail.rs
src/quadrature/: canonical.rs  subdivide.rs  tensor.rs  total_order.rs  univariate.rs
src/space/: fixed_interpolator.rs  interpolate.rs  mod.rs  space_impl.rs  spatially_indexed.rs
tests/: convergence.rs  unit.rs
tests/convergence_tests/: error_estimation.rs  mod.rs  poisson_2d_mms.rs  poisson_3d_mms.rs  poisson_mms_common.rs
tests/convergence_tests/reference_values/: error_estimation_tri3_summary.json  poisson2d_mms_quad4_summary.json  poisson2d_mms_quad9_summary.json  poisson2d_mms_tri3_summary.json  poisson2d_mms_tri6_summary.json  poisson3d_mms_hex20_summary.json  poisson3d_mms_hex27_summary.json  poisson3d_mms_hex8_summary.json  poisson3d_mms_tet10_summary.json  poisson3d_mms_tet20_summary.json  poisson3d_mms_tet4_summary.json
tests/integration_tests/: assembly.rs  geometry.rs  interpolation.rs  mod.rs
tests/unit_tests/: assembly.proptest-regressions  assembly.rs  assembly2.proptest-regressions  assembly2.rs  basis.proptest-regressions  basis.rs  element.proptest-regressions  element.rs  error.rs  fe_mesh.rs  io.rs  mesh.proptest-regressions  mesh.rs  mod.rs  reorder.rs  spatially_indexed.rs
tests/unit_tests/assembly/: global.rs  (+1 more)
util/: Cargo.toml
util/src/: lib.rs
(+35 files in other folders)
