[package]
name = "fenris"
version = "0.1.0"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2018"

[package.metadata.docs.rs]
# For rendering KaTeX on docs.rs
rustdoc-args = [ "--html-in-header assets/doc-header.html"]

[features]
default = [ "proptest" ]

[dependencies]
nalgebra = { version = "0.28", features = [ "serde-serialize" ] }
nalgebra-sparse = { version = "0.4", features = ["compare"] }
vtkio = "0.6"
num = "0.4"
numeric_literals = "0.2.0"
itertools = "0.9"
ordered-float = "1.0"
proptest = { version = "1.0", optional = true }
rayon = "1.3"
fenris-nested-vec = { path="fenris-nested-vec" }
# TODO: Make serde optional
serde = { version="1.0", features = [ "derive" ] }
log = "0.4"
paradis = { path = "paradis" }
rustc-hash = "1.1.0"
thread_local = "1.1.2"
eyre = "0.6"
fenris-sparse = { path = "fenris-sparse" }
fenris-geometry = { path = "fenris-geometry", features = [ "proptest" ] }
fenris-optimize = { path = "fenris-optimize" }
fenris-quadrature = { path = "fenris-quadrature" }

[dev-dependencies]
nalgebra = { version = "0.28", features = [ "serde-serialize", "compare" ] }
proptest = "1.0"
matrixcompare = "0.3"
util = { path = "util" }

# For outputting e.g. convergence test results for later analysis
serde_json = "1.0.64"

# Many of our integration tests depend on fenris-solid for historical reasons
# TODO: Fix this
#fenris-solid = { path = "../fenris-solid" }

[workspace]
members = [
    "fenris-quadrature",
    "fenris-geometry",
    "fenris-optimize",
    "fenris-sparse",
    "fenris-solid",
    "fenris-nested-vec",
    "paradis",
    "polyquad-parse" ]