[package]
name = "fenris"
description = "A library for advanced finite element computations in Rust"
version = "0.0.8"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"
keywords = ["finite", "element", "fem", "pde"]
categories = ["science"]
readme = "README.md"
resolver = "2"

[package.metadata.docs.rs]
# For rendering KaTeX on docs.rs
rustdoc-args = [ "--html-in-header", "assets/doc-header.html"]

[features]
default = [ "proptest" ]

[dependencies]
nalgebra = { version = "0.28", features = [ "serde-serialize" ] }
nalgebra-sparse = { version = "0.4", features = ["compare"] }
vtkio = "0.6"
num = "0.4"
numeric_literals = "0.2.0"
itertools = "0.9"
ordered-float = "1.0"
proptest = { version = "1.0", optional = true }
rayon = "1.3"
# TODO: Make serde optional
serde = { version="1.0", features = [ "derive" ] }
log = "0.4"
rustc-hash = "1.1.0"
thread_local = "1.1.2"
eyre = "0.6"
fenris-paradis = { version="0.0.1", path = "fenris-paradis" }
fenris-nested-vec = { version="0.0.1", path = "fenris-nested-vec" }
fenris-sparse = { version="0.0.1", path = "fenris-sparse" }
fenris-geometry = { version= "^0.0.2", path = "fenris-geometry", features = [ "proptest" ] }
fenris-optimize = { version="0.0.1", path = "fenris-optimize" }
fenris-quadrature = { version="0.0.2", path = "fenris-quadrature" }

[dev-dependencies]
nalgebra = { version = "0.28", features = [ "serde-serialize", "compare" ] }
proptest = "1.0"
matrixcompare = "0.3"
util = { path = "util" }

# For outputting e.g. convergence test results for later analysis
serde_json = "1.0.64"

[workspace]
members = [
    "fenris-quadrature",
    "fenris-geometry",
    "fenris-optimize",
    "fenris-sparse",
    "fenris-solid",
    "fenris-nested-vec",
    "fenris-paradis",
    "polyquad-parse" ]
