[package]
name = "fenris"
description = "A library for advanced finite element computations in Rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

keywords = ["finite", "element", "fem", "pde"]
categories = ["science"]
readme = "README.md"
resolver = "2"

[package.metadata.docs.rs]
# For rendering KaTeX on docs.rs
rustdoc-args = [ "--html-in-header", "assets/doc-header.html",
                 "--html-before-content", "assets/doc-before-content.html"]

[features]
default = [ ]
proptest-support = [ "proptest", "fenris-geometry/proptest-support", "nalgebra/proptest-support" ]

[dependencies]
nalgebra = { workspace = true, features = [ "std", "serde-serialize" ] }
nalgebra-sparse = { workspace = true, features = ["compare"] }
davenport = "0.1.1"
vtkio = "0.6"
num = "0.4"
numeric_literals = "0.2.0"
itertools = "0.10.5"
ordered-float = "3.7"
proptest = { version = "1.0", optional = true }
rayon = "1.6.1"
# TODO: Make serde optional
serde = { version="1.0", features = [ "derive" ] }
log = "0.4"
rustc-hash = "1.1.0"
thread_local = "1.1.2"
eyre = "0.6"
fenris-traits = { version="0.0.2", path = "fenris-traits" }
fenris-paradis = { version="0.0.3", path = "fenris-paradis" }
fenris-nested-vec = { version="0.0.1", path = "fenris-nested-vec" }
fenris-sparse = { version= "0.0.5", path = "fenris-sparse" }
fenris-geometry = { version= "0.0.6", path = "fenris-geometry", features = [ "proptest" ] }
fenris-optimize = { version= "0.0.3", path = "fenris-optimize" }
fenris-quadrature = { version= "0.0.4", path = "fenris-quadrature" }
mshio = "0.4.2"
rstar = "0.10"
fxhash = "0.2.1"
parking_lot = "0.12.1"

[dev-dependencies]
fenris = { path = ".", features = [ "proptest-support" ]}
fenris-solid = { path = "fenris-solid" }
nalgebra = { workspace = true, features = [ "serde-serialize", "compare" ] }
proptest = "1.0"
matrixcompare = { version="0.3", features = ["proptest-support"] }
util = { path = "util" }
paste = "1.0.6"
insta = "1.21.0"
criterion = "0.4.0"

# For outputting e.g. convergence test results for later analysis
serde_json = "1.0.64"

[workspace]
members = [
    "fenris-traits",
    "fenris-quadrature",
    "fenris-geometry",
    "fenris-optimize",
    "fenris-sparse",
    "fenris-solid",
    "fenris-nested-vec",
    "fenris-paradis",
    "polyquad-parse" ]

[workspace.package]
# Currently only fenris and fenris-solid inherit this version. The rule of thumb is that anything that depends *on* fenris
# as part of the workspace should share the same version (and be released at the same time)
version = "0.0.33"
# Other sub-packages also inherit this stuff
authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"

[workspace.dependencies]
nalgebra = { version = "0.32.1", default-features = false }
nalgebra-sparse = { version = "0.9.0", default-features = false }
fenris = { version = "0.0.33", path = "." }

[[bench]]
name = "assembly"
harness = false
