[package]
name = "fenris-geometry"
version = "0.0.4"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"
description = "Geometry functionality for fenris"
edition = "2021"

[features]
proptest-support = [ "proptest", "nalgebra/proptest-support" ]

[dependencies]
itertools = "0.9"
nalgebra = "0.28"
serde = { version="1.0", features = [ "derive" ] }
numeric_literals = "0.2.0"
fenris-nested-vec = { version = "0.0.1", path="../fenris-nested-vec" }
proptest = { version="1.0", optional = true }
fenris-traits = { version = "0.0.1", path = "../fenris-traits" }

[dev-dependencies]
fenris-geometry = { path = ".", features = [ "proptest-support" ] }
nalgebra = { version = "0.28", features = [ "compare", "rand" ]}
matrixcompare = { version="0.3", features = ["proptest-support"] }
util = { path="../util" }
fenris = { path = ".." }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"