[package]
name = "fenris-nested-vec"
version = "0.0.1"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"
description = "A data structure used by fenris"

[dependencies]
# TODO: Make optional feature
serde = { version="1.0", features = [ "derive" ] }