[package]
name = "fenris-nested-vec"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A data structure used by fenris"

[dependencies]
# TODO: Make optional feature
serde = { version="1.0", features = [ "derive" ] }