[package]
name = "fenris-optimize"
version = "0.0.2"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"
description = "Optimization functionality used by fenris"

[dependencies]
fenris-traits = { version="0.0.1", path = "../fenris-traits" }
nalgebra = { version = "0.31", features = ["compare"] }
numeric_literals = "0.2.0"
itertools = "0.9"
log = "0.4"

[dev-dependencies]
matrixcompare = "0.3.0"
