[package]
name = "fenris-optimize"
version = "0.0.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Optimization functionality used by fenris"

[dependencies]
fenris-traits = { version="0.0.2", path = "../fenris-traits" }
nalgebra = { workspace = true, features = ["compare", "std"] }
numeric_literals = "0.2.0"
itertools = "0.10.5"
log = "0.4"

[dev-dependencies]
matrixcompare = "0.3.0"
