[package]
name = "fenris-paradis"
version = "0.0.1"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"
description = "Parallel processing of disjoint indices for the fenris library"

[dependencies]
rayon = "1.3"
fenris-nested-vec = { version = "0.0.1", path = "../fenris-nested-vec" }
# TODO: Make serde optional
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
rand = "0.7"
proptest = "1.0"

# For examples in docs or elsewhere
crossbeam = "0.8.1"
