[package]
name = "fenris-paradis"
version = "0.0.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parallel processing of disjoint indices for the fenris library"

[dependencies]
rayon = "1.7"
fenris-nested-vec = { version = "0.0.1", path = "../fenris-nested-vec" }
# TODO: Make serde optional
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
rand = "0.8"
proptest = "1.0"

# For examples in docs or elsewhere
crossbeam = "0.8.1"
