[package]
name = "fenris-quadrature"
version = "0.1.0"
authors = ["Andreas Longva"]
edition = "2018"

[features]
doc-images = [ "embed-doc-image" ]

[dependencies]
# TODO: Make this optional along with a "doc-images" feature
embed-doc-image = { version="0.1.4", optional = true }

[dev-dependencies]
matrixcompare = "0.3.0"
nalgebra = "0.28"

[build-dependencies]
polyquad-parse = { path = "../polyquad-parse", version = "0.1" }
quote = "1.0.9"
proc-macro2 = "1.0"