[package]
name = "fenris-quadrature"
version = "0.0.1"
authors = ["Andreas Longva"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"
description = "Quadrature rules for finite element applications"

[features]
doc-images = [ "embed-doc-image" ]

[dependencies]
embed-doc-image = { version="0.1.4", optional = true }

[dev-dependencies]
matrixcompare = "0.3.0"
nalgebra = "0.28"

[build-dependencies]
polyquad-parse = { path = "../polyquad-parse", version = "0.1" }
quote = "1.0.9"
proc-macro2 = "1.0"