[package]
name = "fenris-quadrature"
version = "0.0.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Quadrature rules for finite element applications"

[features]
doc-images = [ "embed-doc-image" ]

[dependencies]
embed-doc-image = { version="0.1.4", optional = true }

[dev-dependencies]
matrixcompare = "0.3.0"
nalgebra = { workspace = true }

[build-dependencies]
polyquad-parse = { path = "../polyquad-parse", version = "0.1" }
quote = "1.0.9"
proc-macro2 = "1.0"

[package.metadata.docs.rs]
features = ["doc-images"]
