[package]
name = "fenris-solid"
version = "0.0.2"
authors = ["Andreas Longva <andreas.b.longva@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"
description = "Solid mechanics functionality for fenris"

[dependencies]
fenris = { version = "0.0.2", path = ".." }
serde = "1.0.126"
numeric_literals = "0.2.0"

[dev-dependencies]
matrixcompare = "0.3.0"
fenris-optimize = { version = "0.0.1", path = "../fenris-optimize" }