[package]
name = "fenris-solid"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Solid mechanics functionality for fenris"

[package.metadata.docs.rs]
# For rendering KaTeX on docs.rs
# TODO: Find a way to automatically sync assets/ with root folder assets/ ?
rustdoc-args = [ "--html-in-header", "assets/doc-header.html",
                 "--html-before-content", "assets/doc-header.html" ]

[dependencies]
fenris = { workspace = true }
serde = "1.0.126"
numeric_literals = "0.2.0"

[dev-dependencies]
matrixcompare = "0.3.0"
fenris-optimize = { version = "0.0.3", path = "../fenris-optimize" }
