[package]
name = "fenris-sparse"
version = "0.0.1"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"
description = "Sparse matrix functionality for fenris"

[dependencies]
nalgebra = "0.28"
nalgebra-sparse = "0.4"
rayon = "1.3"
num = "0.4"
fenris-paradis = { version = "0.0.1", path = "../fenris-paradis" }

[dev-dependencies]
proptest = "1.0"
util = { path = "../util" }