[package]
name = "fenris-sparse"
version = "0.0.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sparse matrix functionality for fenris"

[dependencies]
fenris-traits = { version = "0.0.2", path = "../fenris-traits" }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
rayon = "1.6.1"
num = "0.4"
fenris-paradis = { version = "0.0.2", path = "../fenris-paradis" }

[dev-dependencies]
proptest = "1.0"
util = { path = "../util" }
