[package]
name = "fenris-traits"
version = "0.0.1"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/InteractiveComputerGraphics/fenris"
description = "Core traits used by fenris"
edition = "2021"

[dependencies]
nalgebra = { version="0.28.0", default-features = false }