[package]
name = "nested-vec"
version = "0.1.0"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Make optional feature
serde = { version="1.0", features = [ "derive" ] }