[package]
name = "paradis"
version = "0.1.0"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
nested-vec = { path = "../nested-vec" }
# TODO: Make serde optional
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
rand = "0.7"
proptest = "1.0"

# For examples in docs or elsewhere
crossbeam = "0.8.1"
