[package]
name = "sparse"
version = "0.1.0"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.24.1"
rayon = "1.3"
alga = { version = "0.9", default-features = false }
num = "0.2"
itertools = "0.9"
paradis = { path = "../paradis" }

[dev-dependencies]
proptest = "0.9"
sparse-proptest = { path = "sparse-proptest" }
util = { path = "../util" }