[package]
name = "fenris-sparse-proptest"
version = "0.1.0"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fenris-sparse = { path=".." }
nalgebra = "0.25"
proptest = "1.0"
num = "0.2"
util = { path = "../../util" }