[package]
name = "sparse-proptest"
version = "0.1.0"
authors = ["Andreas Longva <longva@cs.rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse = { path=".." }
nalgebra = "0.24.1"
proptest = "0.9"
num = "0.2"
util = { path = "../../util" }